color of time block changes with time change

--- a/index.html
+++ b/index.html
@@ -32,55 +32,55 @@
     <div class="container">
       <!-- Time Blocks -->
       <!-- 9am-->
-      <div id="hour-09" class="timediv-row">
+      <div id="hour-09" class="time-div">
         <div class="timediv-col hour"><span id="9">9am</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 10am -->
-      <div id="hour-10" class="timediv-row">
+      <div id="hour-10" class="time-div">
         <div class="timediv-col hour"><span id="10">10am</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 11am -->
-      <div id="hour-11" class="timediv-row">
+      <div id="hour-11" class="time-div">
         <div class="timediv-col hour"><span id="11">11am</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 12pm -->
-      <div id="hour-12" class="timediv-row">
+      <div id="hour-12" class="time-div">
         <div class="timediv-col hour"><span id="12">12pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 1pm -->
-      <div id="hour-13" class="timediv-row">
+      <div id="hour-13" class="time-div">
         <div class="timediv-col hour"><span id="1">1pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 2pm -->
-      <div id="hour-14" class="timediv-row">
+      <div id="hour-14" class="time-div">
         <div class="timediv-col hour"><span id="2">2pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 3pm -->
-      <div id="hour-15" class="timediv-row">
+      <div id="hour-15" class="time-div">
         <div class="timediv-col hour"><span id="3">3pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 4pm -->
-      <div id="hour-16" class="timediv-row">
+      <div id="hour-16" class="time-div">
         <div class="timediv-col hour"><span id="4">4pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
       </div>
       <!-- 5pm -->
-      <div id="hour-17" class="timediv-row">
+      <div id="hour-17" class="time-div">
         <div class="timediv-col hour"><span id="5">5pm</span></div>
         <textarea class="description" placeholder="Schedule an event"></textarea>
         <button class="saveButton"></button>
