add even column sizing

--- a/index.html
+++ b/index.html
@@ -32,58 +32,76 @@
     <div class="container">
       <!-- Time Blocks -->
       <!-- 9am-->
-      <div id="hour-09" class="time-div">
-        <div class="timediv-col hour"><span id="9">9am</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-09" class="time-div row">
+        <div class="hour col-md-1"><span id="9">9am</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="9am save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 10am -->
-      <div id="hour-10" class="time-div">
-        <div class="timediv-col hour"><span id="10">10am</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-10" class="time-div row">
+        <div class="hour col-md-1"><span id="10">10am</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="10am save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 11am -->
-      <div id="hour-11" class="time-div">
-        <div class="timediv-col hour"><span id="11">11am</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-11" class="time-div row">
+        <div class="hour col-md-1"><span id="11">11am</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="11am save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 12pm -->
-      <div id="hour-12" class="time-div">
-        <div class="timediv-col hour"><span id="12">12pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-12" class="time-div row">
+        <div class="hour col-md-1"><span id="12">12pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="12pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 1pm -->
-      <div id="hour-13" class="time-div">
-        <div class="timediv-col hour"><span id="1">1pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-13" class="time-div row">
+        <div class="hour col-md-1"><span id="1">1pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="1pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 2pm -->
-      <div id="hour-14" class="time-div">
-        <div class="timediv-col hour"><span id="2">2pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-14" class="time-div row">
+        <div class="hour col-md-1"><span id="2">2pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="2pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 3pm -->
-      <div id="hour-15" class="time-div">
-        <div class="timediv-col hour"><span id="3">3pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-15" class="time-div row">
+        <div class="hour col-md-1"><span id="3">3pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="3pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 4pm -->
-      <div id="hour-16" class="time-div">
-        <div class="timediv-col hour"><span id="4">4pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-16" class="time-div row">
+        <div class="hour col-md-1"><span id="4">4pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="4pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
       <!-- 5pm -->
-      <div id="hour-17" class="time-div">
-        <div class="timediv-col hour"><span id="5">5pm</span></div>
-        <textarea class="description" placeholder="Schedule an event"></textarea>
-        <button class="saveButton"></button>
+      <div id="hour-17" class="time-div row">
+        <div class="hour col-md-1"><span id="5">5pm</span></div>
+        <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
+        <button class="saveBtn col-md-1" aria-label="5pm save button">
+          <i class="fa fa-save"></i>
+        </button>
       </div>
     </div>
 
@@ -93,3 +111,4 @@
     <script src="./Assets/script.js"></script>
   </body>
 </html>
+
