--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <button id="resetSchedule" type="button" aria-label="reset schdule button">Reset Schedule</button>
     </header>
     
     <div class="container">
       <!-- Time Blocks -->
       <!-- 9am-->
       <div id="hour-09" class="time-div row">
-        <div class="hour col-md-1"><span id="9">9am</span></div>
+        <div class="hour col-md-1"><span id="9">9AM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
-        <button class="saveBtn col-md-1" aria-label="9am save button">
+        <button class="saveBtn col-md-1" aria-label=AM save button">
           <i class="fa fa-save"></i>
         </button>
       </div>
       <!-- 10am -->
       <div id="hour-10" class="time-div row">
-        <div class="hour col-md-1"><span id="10">10am</span></div>
+        <div class="hour col-md-1"><span id="10">10AM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="10am save button">
           <i class="fa fa-save"></i>
@@ -49,7 +50,7 @@
       </div>
       <!-- 11am -->
       <div id="hour-11" class="time-div row">
-        <div class="hour col-md-1"><span id="11">11am</span></div>
+        <div class="hour col-md-1"><span id="11">11AM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="11am save button">
           <i class="fa fa-save"></i>
@@ -57,7 +58,7 @@
       </div>
       <!-- 12pm -->
       <div id="hour-12" class="time-div row">
-        <div class="hour col-md-1"><span id="12">12pm</span></div>
+        <div class="hour col-md-1"><span id="12">12PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="12pm save button">
           <i class="fa fa-save"></i>
@@ -65,7 +66,7 @@
       </div>
       <!-- 1pm -->
       <div id="hour-13" class="time-div row">
-        <div class="hour col-md-1"><span id="1">1pm</span></div>
+        <div class="hour col-md-1"><span id="1">1PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="1pm save button">
           <i class="fa fa-save"></i>
@@ -73,7 +74,7 @@
       </div>
       <!-- 2pm -->
       <div id="hour-14" class="time-div row">
-        <div class="hour col-md-1"><span id="2">2pm</span></div>
+        <div class="hour col-md-1"><span id="2">2PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="2pm save button">
           <i class="fa fa-save"></i>
@@ -81,7 +82,7 @@
       </div>
       <!-- 3pm -->
       <div id="hour-15" class="time-div row">
-        <div class="hour col-md-1"><span id="3">3pm</span></div>
+        <div class="hour col-md-1"><span id="3">3PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="3pm save button">
           <i class="fa fa-save"></i>
@@ -89,7 +90,7 @@
       </div>
       <!-- 4pm -->
       <div id="hour-16" class="time-div row">
-        <div class="hour col-md-1"><span id="4">4pm</span></div>
+        <div class="hour col-md-1"><span id="4">4PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="4pm save button">
           <i class="fa fa-save"></i>
@@ -97,7 +98,7 @@
       </div>
       <!-- 5pm -->
       <div id="hour-17" class="time-div row">
-        <div class="hour col-md-1"><span id="5">5pm</span></div>
+        <div class="hour col-md-1"><span id="5">5PM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
         <button class="saveBtn col-md-1" aria-label="5pm save button">
           <i class="fa fa-save"></i>
