--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-      <button id="resetSchedule" type="button" aria-label="reset schdule button">Reset Schedule</button>
+      <button class="resetSchedule" type="button" aria-label="reset schdule button">Reset Schedule</button>
     </header>
     
     <div class="container">
@@ -36,7 +36,7 @@
       <div id="hour-09" class="time-div row">
         <div class="hour col-md-1"><span id="9">9AM</span></div>
         <textarea class="description time-block col-md-10" placeholder="Schedule an event"></textarea>
-        <button class="saveBtn col-md-1" aria-label=AM save button">
+        <button class="saveBtn col-md-1" aria-label= "9AM save button">
           <i class="fa fa-save"></i>
         </button>
       </div>
